Interface: Enable Platform service in IPC model
Enable Platform Secure service in IPC model

 - modify Cmake files to build the service for IPC model
 - create NS API source file
 - add IPC model implementation to secure API file
 - add services to Platform Secure partition's yaml file
 - declare IPC support for the Platform Secure partition in
   tfm_manifest_list.yaml
 - enable reset service /SPM request in IPC mode

Change-Id: I553b7c64bb90c65e6200c619b7c0b30881bf490f
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -89,7 +89,7 @@ endif()
 
 if (TFM_PARTITION_PLATFORM)
 	if (TFM_PSA_API)
-		message(FATAL_ERROR "Platform service has not been supported in IPC model yet.")
+		list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_platform_ipc_api.c")
 	else()
 		list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_platform_func_api.c")
 	endif()
