CC312: Support out-of-tree build for CC312
Patch CC312 build system to allow building in a user-specified build
dir. Export all headers required by TF-M.

Change-Id: I9de114379b8437117b30b20b00e415a0b105e01a
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/lib/ext/cryptocell-312-runtime/host/Makefile.defs
+++ b/lib/ext/cryptocell-312-runtime/host/Makefile.defs
@@ -181,7 +181,7 @@ AR = armar
 endif
 
 # subfolder for compilation/generation outcome/objects/binaries
-BUILDDIR = build-$(CROSS_COMPILE:%-=%)
+BUILDDIR = $(PWD)/build-$(CROSS_COMPILE:%-=%)
 
 # Object file suffix
 OBJEXT = .o
