Test: Add platform secure service test suite
Change-Id: I698e4a7ba7f1fff20294ec1b20ad89dc4f7dc06d
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -81,6 +81,7 @@ set(ENABLE_AUDIT_LOGGING_SERVICE_TESTS TRUE)
 set(ENABLE_CRYPTO_SERVICE_TESTS TRUE)
 set(ENABLE_INVERT_SERVICE_TESTS TRUE)
 set(ENABLE_ATTESTATION_SERVICE_TESTS TRUE)
+set(ENABLE_PLATFORM_SERVICE_TESTS TRUE)
 set(ENABLE_QCBOR_TESTS TRUE)
 
 if (NOT TFM_PARTITION_AUDIT_LOG)
