--- a/secure_fw/services/secure_storage/tfm_secure_storage.yaml
+++ b/secure_fw/services/secure_storage/tfm_secure_storage.yaml
@@ -86,6 +86,9 @@
     "version_policy": "STRICT"
    }
   ],
+  "dependencies": [
+    "TFM_CRYPTO"
+  ],
   "linker_pattern": {
     "library_list": [
       "*tfm_storage*"
