--- a/test/test_services/tfm_secure_client_service/tfm_test_client_service.yaml
+++ b/test/test_services/tfm_secure_client_service/tfm_test_client_service.yaml
@@ -37,6 +37,22 @@
       "version_policy": "STRICT"
     }
   ],
+  "dependencies": [
+    "TFM_CRYPTO",
+    "TFM_SST_SET",
+    "TFM_SST_GET",
+    "TFM_SST_GET_INFO",
+    "TFM_SST_REMOVE",
+    "TFM_SST_GET_SUPPORT",
+    "TFM_ITS_SET",
+    "TFM_ITS_GET",
+    "TFM_ITS_GET_INFO",
+    "TFM_ITS_REMOVE",
+    "TFM_ATTEST_GET_TOKEN",
+    "TFM_ATTEST_GET_TOKEN_SIZE",
+    "TFM_ATTEST_GET_PUBLIC_KEY",
+    "TFM_SST_TEST_PREPARE"
+  ],
 # Currently there is no platform dependent section of the manifest file,
 # therefore all platform dependent files must be listed here which can be used
 # on any supported platform.
