Build: Remove heap_size from manifest
According to PSA FF, it must produce a build error if the dynamic
memory allocation APIs are not supported.
- Remove the heap_size from manifest.
- Produce a build error if head_size is added.
This mechanism will be removed after dynamic memory allocation is
supported.

Change-Id: Idc71bf0d51405b73f2d613bc4ef15a60726158a5
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/spm/tfm_spm_db.inc.template
+++ b/secure_fw/spm/tfm_spm_db.inc.template
@@ -13,6 +13,12 @@
 #include "spm_api.h"
 #include "psa_manifest/sid.h"
 
+{# Produce a build error if heap_size is presented in the manifest, because of the dynamic memory allocation is not supported now. #}
+{% for manifest in manifests %}
+    {% if manifest.manifest.heap_size %}
+#error "Please do not add 'heap_size' for partition '{{manifest.manifest.name}}', the dynamic memory allocation is not supported now!"
+    {% endif %}
+{% endfor %}
 /**************************************************************************/
 /** IRQ count per partition */
 /**************************************************************************/
