Dualcpu: Add NS mailbox statistics functionalities
Add statistics module in NS mailbox.
It records the number of mailbox message submission and the total
number of occupied NS mailbox queue slots each time NS task
acquires a mailbox queue slot.
NS tests can call tfm_ns_mailbox_stats_avg_slots() to calculate
the average number of occupied NS mailbox queue slots each time
NS task acquires a mailbox queue slot. It can prove the feature of
multiple outstanding NS PSA Client calls feature in dual-core
mailbox.

Change-Id: Icd9553996c516901f6b3fc7d68b4c4d0f0f0a5da
Signed-off-by: David Hu <david.hu@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2017-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2017-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -149,6 +149,10 @@ if (TFM_PSA_API)
 			"${INTERFACE_DIR}/src/tfm_multi_core_api.c"
 			"${INTERFACE_DIR}/src/tfm_multi_core_psa_ns_api.c"
 			)
+
+		if (TFM_MULTI_CORE_TEST)
+			add_definitions(-DTFM_MULTI_CORE_TEST)
+		endif()
 	else()
 		list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_psa_ns_api.c")
 	endif()
