--- a/lib/ext/cryptocell-312-runtime/host/src/cc3x_lib/Makefile
+++ b/lib/ext/cryptocell-312-runtime/host/src/cc3x_lib/Makefile
@@ -5,7 +5,7 @@
 #
 #-------------------------------------------------------------------------------
 
-HOST_PROJ_ROOT ?= $(shell pwd)/../..
+HOST_PROJ_ROOT ?= ../..
 include $(HOST_PROJ_ROOT)/Makefile.defs
 
 API_DIR = $(CODESAFE_SRCDIR)/crypto_api/cc3x_sym/api
