--- a/lib/ext/cryptocell-312-runtime/host/src/pal/linux/Makefile
+++ b/lib/ext/cryptocell-312-runtime/host/src/pal/linux/Makefile
@@ -7,7 +7,7 @@
 
 # Makefile for pal for linux
 
-HOST_PROJ_ROOT ?= $(shell pwd)/../../..
+HOST_PROJ_ROOT ?= ../../..
 include $(HOST_PROJ_ROOT)/Makefile.defs
 TARGET_LIBS = pal_linux
 PLAT_OS=linux
