--- a/lib/ext/cryptocell-312-runtime/utils/src/cc3x_boot_cert/Makefile
+++ b/lib/ext/cryptocell-312-runtime/utils/src/cc3x_boot_cert/Makefile
@@ -15,7 +15,7 @@ endif
 $(info $$SUB_DIRS_PREFIX is [${SUB_DIRS_PREFIX}])
 
 # shared library to build
-SBU_ROOT = $(shell pwd)
+SBU_ROOT = $(PWD)
 UTIL_ROOT = $(SBU_ROOT)/../..
 SBU_CRYP_LIB_PATH = $(SUB_DIRS_PREFIX)_lib
 SBU_CRYP_LIB_NAME = libsbu_crypto.so
