--- a/lib/ext/cryptocell-312-runtime/utils/src/dmpu_asset_pkg_util/oem_asset_package/lib/Makefile
+++ b/lib/ext/cryptocell-312-runtime/utils/src/dmpu_asset_pkg_util/oem_asset_package/lib/Makefile
@@ -10,7 +10,7 @@ SH_LIB_NAME = lib_oem_asset_pkg.so
 
 LIB_SRC_O = main.o dmpu_common.o common_crypto_asym.o  common_crypto_sym.o common_rsa_keypair_util.o common_rsa_keypair.o common_util_files.o
 
-UTILS_ROOT = $(shell pwd)/../../../..
+UTILS_ROOT = $(PWD)/../../../..
 SHARED_DIR = $(UTILS_ROOT)/../shared
 HOSTSRC_DIR = $(UTILS_ROOT)/../host/src
 UTILS_LIB_PATH = $(UTILS_ROOT)/lib
