--- a/platform/ext/common/cc312/cc312_proj_cfg.mk.in
+++ b/platform/ext/common/cc312/cc312_proj_cfg.mk.in
@@ -30,9 +30,18 @@ CC_CONFIG_SB_CERT_VERSION_MAJOR         =  1
 CC_CONFIG_SB_CERT_VERSION_MINOR         =  0
 CC_CONFIG_SB_CC3X =  1
 
-CFLAGS_EXTRA += -DCRYPTO_HW_ACCELERATOR=1
-CFLAGS_EXTRA += -DHW_ACCELERATOR_CC312=1
-CFLAGS_EXTRA += -DUSE_MBEDTLS_CRYPTOCELL=1
+# Mbed-crypto settings
+MBEDCRYPTO_ROOT=@MBEDCRYPTO_SOURCE_DIR@
+MBEDCRYPTO_ROOT_DIR=@MBEDCRYPTO_SOURCE_DIR@
+
+# Build settings
+BUILDDIR=@CC312_BUILD_DIR@
+RELEASE_LIBDIR=@CC312_INSTALL_DIR@/lib/
+RELEASE_INCDIR=@CC312_INSTALL_DIR@/include/
+
+CFLAGS_EXTRA += -DCRYPTO_HW_ACCELERATOR
+CFLAGS_EXTRA += -DHW_ACCELERATOR_CC312
+CFLAGS_EXTRA += -DUSE_MBEDTLS_CRYPTOCELL
 
 CFLAGS_EXTRA += -DCC_CONFIG_TRNG_MODE=0
 CFLAGS_EXTRA += -DCC_CONFIG_SUPPORT_SRP=1
@@ -51,6 +60,9 @@ CFLAGS_EXTRA += -fshort-wchar
 CFLAGS_EXTRA += -funsigned-char
 CFLAGS_EXTRA += -ffunction-sections
 CFLAGS_EXTRA += -fdata-sections
+CFLAGS_EXTRA += @CC312_C_FLAGS@
+
+INCDIRS_EXTRA += @CC312_INC_DIR@
 
 TEST_PRODUCT  =  cc3x
 PROJ_TARGETS +=  cc3x_lib pal cc3x_productionlib
