--- a/lib/ext/cryptocell-312-runtime/host/src/tests/integration_cc3x/dmpu_integration_test/Makefile
+++ b/lib/ext/cryptocell-312-runtime/host/src/tests/integration_cc3x/dmpu_integration_test/Makefile
@@ -5,7 +5,7 @@
 #
 #-------------------------------------------------------------------------------
 
-HOST_PROJ_ROOT ?= $(shell pwd)/../../../..
+HOST_PROJ_ROOT ?= ../../../..
 
 ifneq (,$(findstring gnu,$(CROSS_COMPILE)))
 TEE_OS = linux
