--- a/lib/ext/cryptocell-312-runtime/utils/src/dmpu_asset_pkg_util/oem_key_request/Makefile
+++ b/lib/ext/cryptocell-312-runtime/utils/src/dmpu_asset_pkg_util/oem_key_request/Makefile
@@ -8,7 +8,7 @@
 # Makefile for managing build and installation
 
 # shared library to build
-UTIL_ROOT = $(shell pwd)
+UTIL_ROOT = $(PWD)
 UTILS_DIR_ROOT = $(UTIL_ROOT)/../../..
 HOST_DIR_ROOT = $(UTILS_DIR_ROOT)/../host
 UTILS_LIB_PATH = ./lib
