Core: Add support for ALL_SRC_ASM
Similar to ALL_SRC_C, for use with (platform) assembly code that
is common to secure, non-secure, and BL2.
Note that bl2/ext/mcuboot/CMakeLists.txt already supports it.

Change-Id: I01bac335d0915b6d4750bdc46074a02f44de977a
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -155,7 +155,7 @@ embedded_set_target_linker_file(TARGET ${PROJECT_NAME} PATH  "${NS_SCATTER_FILE_
 #Create an object library to avoid compiling all source files twice, when two executables
 #with different memory map need to be linked(BL2 non-swapping)
 set(PROJECT_OBJ_LIB ${PROJECT_NAME}_obj_lib)
-add_library(${PROJECT_OBJ_LIB} OBJECT ${ALL_SRC_C} ${ALL_SRC_C_NS} ${ALL_SRC_ASM_NS} ${NS_APP_SRC})
+add_library(${PROJECT_OBJ_LIB} OBJECT ${ALL_SRC_C} ${ALL_SRC_C_NS} ${ALL_SRC_ASM} ${ALL_SRC_ASM_NS} ${NS_APP_SRC})
 
 #Set common compiler flags
 config_setting_shared_compiler_flags(${PROJECT_OBJ_LIB})
