Test: Add the dependence of platform service
Add the dependence of platform secure partition services into the
manifest file of test client partition.

Change-Id: I9afde5b4a16ce5c40188bbe54f1db3ea01b11864
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/test/test_services/tfm_secure_client_service/tfm_test_client_service.yaml
+++ b/test/test_services/tfm_secure_client_service/tfm_test_client_service.yaml
@@ -51,7 +51,9 @@
     "TFM_ATTEST_GET_TOKEN",
     "TFM_ATTEST_GET_TOKEN_SIZE",
     "TFM_ATTEST_GET_PUBLIC_KEY",
-    "TFM_SST_TEST_PREPARE"
+    "TFM_SST_TEST_PREPARE",
+    "TFM_SP_PLATFORM_SYSTEM_RESET",
+    "TFM_SP_PLATFORM_IOCTL"
   ],
 # Currently there is no platform dependent section of the manifest file,
 # therefore all platform dependent files must be listed here which can be used
