Platform: Fix XXX_ATTR_FN section label in GNUARM linker script
In GNUARM linker script, XXX_ATTR_FN sections of Application RoT
Secure Partitions are actually named as XXX_LD_ATTR_FN.
GNUARM cannot get the exact section to place XXX_ATTR_FN from
Application RoT Secure Partitions.
Therefore, GNUARM may put those Application RoT sections into
incorrect memory space or incorrectly link them.

Fix XXX_ATTR_FN labels for Application RoT Secure Partitions to
solve the issue.

Change-Id: Iad9a7db94ac6f04eb38b058124a22ce07bf90b96
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -159,7 +159,7 @@ SECTIONS
         {{pattern}}(.rodata*)
         {% endfor %}
     {% endif %}
-        *({{manifest.manifest.name}}_LD_ATTR_FN)
+        *({{manifest.manifest.name}}_ATTR_FN)
         . = ALIGN(32);
     } > FLASH
     Image$${{manifest.manifest.name}}_LINKER$$RO$$Base = ADDR(.{{manifest.manifest.name}}_LINKER);
