Boot: Move logging macros to project specific file
Move the logging macros to mcuboot_logging.h and add another project
specific mcuboot_config.h file as they are needed to build TF-M with
upstream MCUBoot.

Change-Id: I01d0c6aed028f8e9c6db6acfd290e12afd3dfdc1
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -211,7 +211,7 @@ endif()
 #Configure log level for MCUBoot.
 get_property(_log_levels CACHE MCUBOOT_LOG_LEVEL PROPERTY STRINGS)
 list(FIND _log_levels ${MCUBOOT_LOG_LEVEL} LOG_LEVEL_ID)
-target_compile_definitions(${PROJECT_NAME} PRIVATE BOOT_LOG_LEVEL=${LOG_LEVEL_ID})
+target_compile_definitions(${PROJECT_NAME} PRIVATE MCUBOOT_LOG_LEVEL=${LOG_LEVEL_ID})
 
 #Set install location. Keep original value to avoid overriding command line settings.
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
