Test: Add an ipc test for psa_call
Add tfm_ipc_test_1010 to test psa_call with the status of
PSA_ERROR_PROGRAMMER_ERROR.

Change-Id: I04813ff2aacbe830092690c636cb2ebb71e5bacc
Signed-off-by: Shawn Shan <shawn.shan@arm.com>

--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -42,6 +42,13 @@
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
+    },
+    {
+      "name": "IPC_SERVICE_TEST_CLIENT_PROGRAMMER_ERROR",
+      "sid": "0x0000F084",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ],
   "linker_pattern": {
