Test: Add Secure Client 2 test partition
Adds the Secure Client 2 test partition, which provides a service to
call test functions by ID within the execution context of this
partition.

This makes it possible to test scenarios involving multiple partitions.

Change-Id: I6183fc1d0f9d6f23c01e638ce9589afdb919eb47
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -149,6 +149,17 @@
       "version_major": 0,
       "version_minor": 1,
       "pid": 268
+    },
+    {
+      "name": "TF-M Secure Client 2 Service",
+      "short_name": "TFM_SP_SECURE_CLIENT_2",
+      "manifest": "test/test_services/tfm_secure_client_2/tfm_secure_client_2.yaml",
+      "tfm_extensions": true,
+      "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_TEST_SECURE_SERVICES",
+      "version_major": 0,
+      "version_minor": 1,
+      "pid": 269
     }
   ]
 }
