--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -38,6 +38,12 @@
         "short_name": "tfm_common_s.sct",
         "template": "platform/ext/common/armclang/tfm_common_s.sct.template",
         "output": "platform/ext/common/armclang/tfm_common_s.sct"
+    },
+    {
+        "name": "Common secure icf file",
+        "short_name": "tfm_common_s.icf",
+        "template": "platform/ext/common/iar/tfm_common_s.icf.template",
+        "output": "platform/ext/common/iar/tfm_common_s.icf"
     },
     {
         "name": "Secure Veneers C file",
